fixed overlapping name in mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -673,7 +673,7 @@ BUTTONS
     background-size: 400% 250%;
   }
   .start>h1{
-    font-size: 3em;
+    font-size: 1.5em;
   }
   .responsive {
     width: 100%;
